--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@ document.getElementById("payBtn").onclick = function () {
 
   // Replace with your Razorpay Key ID (frontend)
   var options = {
-    key: "rzp_test_Rru3aihggKA46N", // <-- Key ID
+    key: "rzp_live_RuzRtEr4loxVYw", // <-- Key ID
     amount: 1 * 100,              // 1000 INR in paise
     currency: "INR",
     name: "G10 Educational Platform",
