--- a/public/success.html
+++ b/public/success.html
@@ -5,10 +5,15 @@
 </head>
 <body>
 
-<h3>Verifying payment, please wait...</h3>
+<h3>Verifying payment...</h3>
 
 <script>
 const data = JSON.parse(localStorage.getItem("paymentData"));
+
+if (!data) {
+  alert("No payment data");
+  location.href = "payment.html";
+}
 
 fetch("/verify-payment", {
   method: "POST",
@@ -18,13 +23,12 @@ fetch("/verify-payment", {
 .then(res => res.json())
 .then(result => {
   if (result.success) {
-    const expiry = new Date();
-    expiry.setDate(expiry.getDate() + 365);
-    localStorage.setItem("accessExpiry", expiry.getTime());
-    window.location.href = "protected.html";
+    const expiry = Date.now() + 365 * 24 * 60 * 60 * 1000;
+    localStorage.setItem("accessExpiry", expiry);
+    location.href = "protected.html";
   } else {
     alert("Payment verification failed");
-    window.location.href = "payment.html";
+    location.href = "payment.html";
   }
 });
 </script>
